tests/diag/set-on-const.wisp
const power = 0;
surface bar {
  widget btn {
    on_click() = set(power, 1);
  }
}
